--- a/start.html
+++ b/start.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My start file is not index.html file</h1>
+    <h1>My start file is not index.html fileg</h1>
+    <h3>new destination</h3>
+    <img src="flower12.png" alt="">
 </body>
 </html>
