--- a/start.html
+++ b/start.html
@@ -8,6 +8,11 @@
 <body>
     <h1>My start file is not index.html fileg</h1>
     <h3>new destination</h3>
+    <div>
+        <h3>new blog</h3>
+        <h5>look mama, i can write a blog</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia dignissimos accusantium modi! Eius corrupti perspiciatis praesentium ipsum, deserunt doloribus vel soluta consequuntur pariatur eveniet dolorem rem facere, maiores autem delectus minima quas. Animi id amet eaque impedit maxime neque.</p>
+    </div>
     <img src="flower12.png" alt="">
 </body>
 </html>
